[package]
name = "wasm-canvas"
version = "0.1.0"
authors = ["HlinaCZ <djhlinacz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.23"
wasm-bindgen = "0.2.46"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
